[project]
name = "agentic-workflow-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googlemaps>=4.10.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "pydantic-ai>=0.3.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
